# think-cli

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  pyproject.toml  requirements-dev.txt  setup.py  think.py
.github/workflows/: python-package.yml
docs/: Examples.md  Plan.md  README.md  Release checklist.md  Release-checklist.md  ai-bots.md  creating-a-changelog-entry-with-ai-bots.md  creating-a-commit-message-with-ai-bots.md
tests/: assets.py  conftest.py  test_convert.py  test_count.py  test_fan.py  test_ls.py  test_markdown.py  test_markdown_file.py  test_random.py  test_sort.py
tests/assets/: fan_sections.py  sort_timestamps.py
think/: __init__.py  convert_wikilinks_to_markdown.py  count.py  fan_sections.py  files.py  ls.py  random.py  sort_timestamps.py  think.py
think/markdown/: __init__.py
