[build-system]
requires = ["setuptools", "wheel"]


[project]
name = "think"
version = "0.2.0"
description = "A command line tool to work with Markdown files"
readme = "README.md"
dependencies = ["Click>=8.1.3"]


[project.scripts]
t = "think:cli"


[tool.isort]
src_paths = ["think", "tests"]


[tool.pytest.ini_options]
pythonpath = ["."]
